create initial stage if no posts